@@ -572,6 +572,23 @@ condition|(
 name|node
 operator|==
 literal|null
+operator|||
+operator|!
+literal|"true"
+operator|.
+name|equals
+argument_list|(
+name|DOMUtil
+operator|.
+name|getAttrOrDefault
+argument_list|(
+name|node
+argument_list|,
+literal|"enabled"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
 condition|)
 block|{
 name|Map
