@@ -482,6 +482,45 @@ name|name
 argument_list|)
 return|;
 block|}
+DECL|method|getAttrOrDefault
+specifier|public
+specifier|static
+name|String
+name|getAttrOrDefault
+parameter_list|(
+name|Node
+name|nd
+parameter_list|,
+name|String
+name|name
+parameter_list|,
+name|String
+name|def
+parameter_list|)
+block|{
+name|String
+name|attr
+init|=
+name|getAttr
+argument_list|(
+name|nd
+operator|.
+name|getAttributes
+argument_list|()
+argument_list|,
+name|name
+argument_list|)
+decl_stmt|;
+return|return
+name|attr
+operator|==
+literal|null
+condition|?
+name|def
+else|:
+name|attr
+return|;
+block|}
 DECL|method|getAttr
 specifier|public
 specifier|static
