@@ -1,4 +1,14 @@
 {
+//-------legend----------
+// 0  = string attribute
+// 1  = string node
+// 10 = boolean attribute
+// 11 = boolean node
+// 20 = int attrubute
+// 21 = int node
+// 30 = float attribute
+// 31 = float node
+//------------------------
   "updateHandler":{
     "autoCommit":{
       "maxDocs":20,
@@ -12,6 +22,7 @@
   "query":{
     "filterCache":{
       "class":0,
+      "enabled":10,
       "size":0,
       "initialSize":20,
       "autowarmCount":20,
@@ -19,6 +30,7 @@
       "regenerator":0},
     "queryResultCache":{
       "class":0,
+      "enabled":10,
       "size":20,
       "initialSize":20,
       "autowarmCount":20,
@@ -26,12 +38,14 @@
       "regenerator":0},
     "documentCache":{
       "class":0,
+      "enabled":10,
       "size":20,
       "initialSize":20,
       "autowarmCount":20,
       "regenerator":0},
     "fieldValueCache":{
       "class":0,
+      "enabled":10,
       "size":20,
       "initialSize":20,
       "autowarmCount":20,
