@@ -608,6 +608,225 @@ literal|null
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testCacheEnablingDisabling
+specifier|public
+name|void
+name|testCacheEnablingDisabling
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// ensure if cache is not defined in the config then cache is disabled
+name|SolrConfig
+name|sc
+init|=
+operator|new
+name|SolrConfig
+argument_list|(
+operator|new
+name|SolrResourceLoader
+argument_list|(
+name|TEST_PATH
+argument_list|()
+operator|.
+name|resolve
+argument_list|(
+literal|"collection1"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|"solrconfig-defaults.xml"
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|sc
+operator|.
+name|filterCacheConfig
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|sc
+operator|.
+name|queryResultCacheConfig
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|sc
+operator|.
+name|documentCacheConfig
+argument_list|)
+expr_stmt|;
+comment|// enable all the caches via system properties and verify
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"filterCache.enabled"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"queryResultCache.enabled"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"documentCache.enabled"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|sc
+operator|=
+operator|new
+name|SolrConfig
+argument_list|(
+operator|new
+name|SolrResourceLoader
+argument_list|(
+name|TEST_PATH
+argument_list|()
+operator|.
+name|resolve
+argument_list|(
+literal|"collection1"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|"solrconfig-cache-enable-disable.xml"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|sc
+operator|.
+name|filterCacheConfig
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|sc
+operator|.
+name|queryResultCacheConfig
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|sc
+operator|.
+name|documentCacheConfig
+argument_list|)
+expr_stmt|;
+comment|// disable all the caches via system properties and verify
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"filterCache.enabled"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"queryResultCache.enabled"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"documentCache.enabled"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|sc
+operator|=
+operator|new
+name|SolrConfig
+argument_list|(
+operator|new
+name|SolrResourceLoader
+argument_list|(
+name|TEST_PATH
+argument_list|()
+operator|.
+name|resolve
+argument_list|(
+literal|"collection1"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|"solrconfig-cache-enable-disable.xml"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|sc
+operator|.
+name|filterCacheConfig
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|sc
+operator|.
+name|queryResultCacheConfig
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|sc
+operator|.
+name|documentCacheConfig
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"filterCache.enabled"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"queryResultCache.enabled"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"documentCache.enabled"
+argument_list|)
+expr_stmt|;
+block|}
 comment|// If defaults change, add test methods to cover each version
 annotation|@
 name|Test
