@@ -230,6 +230,8 @@ New Features
 
 * SOLR-9856: Collect metrics for shard replication and tlog replay on replicas (ab).
 
+* SOLR-9886: Add a 'enable' flag to caches to enable/disable them (Pushkar Raste, noble)
+
 Optimizations
 ----------------------
 * SOLR-9704: Facet Module / JSON Facet API: Optimize blockChildren facets that have
